# test-erp

./: .gitignore  README.md
crates/erp-domain/: Cargo.toml
crates/erp-domain/src/accounting/events/: mod.rs
crates/erp-domain/src/accounting/ports/: repository.rs
crates/erp-domain/src/accounting/value_objects/: mod.rs
crates/erp-domain/src/inventory/: mod.rs
crates/erp-domain/src/inventory/entities/: mod.rs
crates/erp-domain/src/inventory/events/: mod.rs
crates/erp-domain/src/inventory/ports/: repository.rs
crates/erp-domain/src/inventory/value_objects/: quantity.rs
crates/erp-domain/src/invoicing/events/: invoice_issued.rs
crates/erp-domain/src/invoicing/ports/: mod.rs  repository.rs
crates/erp-domain/src/invoicing/value_objects/: mod.rs  tax_id.rs
crates/erp-domain/src/shared/: errors.rs  money.rs
crates/erp-infrastructure/: Cargo.toml
crates/erp-infrastructure/src/persistence/: mod.rs
crates/erp-infrastructure/src/persistence/postgres/: product_repository.rs
crates/erp-server/: Cargo.toml
rust-erp/: .env.example  Cargo.toml  README.md
rust-erp/crates/erp-application/: Cargo.toml
rust-erp/crates/erp-application/src/accounting/commands/: post_journal_entry.rs
rust-erp/crates/erp-application/src/accounting/queries/: get_account_balance.rs
rust-erp/crates/erp-application/src/inventory/: mod.rs
rust-erp/crates/erp-application/src/inventory/commands/: adjust_stock.rs  mod.rs
rust-erp/crates/erp-application/src/inventory/queries/: list_products.rs
rust-erp/crates/erp-application/src/invoicing/: mod.rs
rust-erp/crates/erp-application/src/invoicing/queries/: list_invoices.rs  mod.rs
rust-erp/crates/erp-domain/src/: lib.rs
rust-erp/crates/erp-domain/src/accounting/: mod.rs
rust-erp/crates/erp-domain/src/accounting/entities/: account.rs  journal_entry.rs  mod.rs
rust-erp/crates/erp-domain/src/accounting/events/: entry_posted.rs
rust-erp/crates/erp-domain/src/accounting/ports/: mod.rs
rust-erp/crates/erp-domain/src/invoicing/: mod.rs
rust-erp/crates/erp-domain/src/shared/: currency.rs  entity_id.rs  mod.rs  timestamp.rs
rust-erp/crates/erp-infrastructure/src/: lib.rs
rust-erp/crates/erp-infrastructure/src/events/: in_memory_publisher.rs  mod.rs
rust-erp/crates/erp-server/src/: lib.rs  main.rs
rust-erp/crates/erp-server/tests/: health_tests.rs
rust-erp/crates/erp-templates/: Cargo.toml
rust-erp/crates/erp-templates/src/: lib.rs
rust-erp/crates/erp-templates/templates/: base.html
rust-erp/crates/erp-templates/templates/accounting/: journal.html
rust-erp/crates/erp-templates/templates/inventory/: product-list.html
rust-erp/crates/erp-web/: Cargo.toml
rust-erp/crates/erp-web/src/: lib.rs  router.rs
rust-erp/crates/erp-web/src/dto/: mod.rs  requests.rs
rust-erp/crates/erp-web/src/handlers/: accounting.rs  inventory.rs  invoicing.rs
rust-erp/migrations/: 20260620000100_create_erp_tables.sql
rust-erp/tests/: accounting_tests.rs  inventory_tests.rs
(+35 files in other folders)
