[workspace]
members = [
    "crates/erp-domain",
    "crates/erp-application",
    "crates/erp-infrastructure",
    "crates/erp-web",
    "crates/erp-templates",
    "crates/erp-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
authors = ["ERP Team"]

[workspace.dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["macros", "form"] }
chrono = { version = "=0.4.42", default-features = false, features = ["clock", "serde"] }
dotenvy = "=0.15.7"
minijinja = "=2.20.0"
rust_decimal = { version = "=1.39.0", default-features = false, features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "derive"] }
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "=1.18.1", features = ["v4", "serde"] }
