[package]
name = "erp-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
uuid.workspace = true
