[package]
name = "erp-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
erp-domain = { path = "../erp-domain" }
rust_decimal.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
