[package]
name = "erp-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
erp-application = { path = "../erp-application" }
erp-infrastructure = { path = "../erp-infrastructure" }
erp-web = { path = "../erp-web" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
